--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -29,7 +29,7 @@
       %div.header
         = link_to image_tag('ico-return.svg', alt: 'Icon'), my_profile_accounts_path
         %a.returnbtn(href=my_profile_accounts_path) Listado de cuentas
-        %h1 Agregar Cuenta
+        %h1 Editar Cuenta
         %div.separator
         = form_for @account do |f|  
           %div.info
