--- a/app/views/my_profile/accounts.html.haml
+++ b/app/views/my_profile/accounts.html.haml
@@ -28,7 +28,7 @@
 
       %div.header
         %h1 Cuentas Bancarias
-        %a.pinkbtn(href=my_profile_new_account_path) Agregar
+        %a.pinkbtn(href=new_account_path) Agregar
         %div.separator
 
       %div.info
