--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -30,12 +30,12 @@
             %img.d-block.w-100.carousel-img{alt: "Third slide", src: "https://www.dike.lib.ia.us/images/sample-2.jpg/image"}
             %div.carousel-caption
               %p wtf is dis shiet
-        %a.carousel-control-prev{"data-slide" => "prev", href: "#carouselExampleIndicators", role: "button"}
-          %span.carousel-control-prev-icon{"aria-hidden" => "true"}
-          %span.sr-only Previous
-        %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
-          %span.carousel-control-next-icon{"aria-hidden" => "true"}
-          %span.sr-only Next
+        -# %a.carousel-control-prev{"data-slide" => "prev", href: "#carouselExampleIndicators", role: "button"}
+        -#   %span.carousel-control-prev-icon{"aria-hidden" => "true"}
+        -#   %span.sr-only Previous
+        -# %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
+        -#   %span.carousel-control-next-icon{"aria-hidden" => "true"}
+        -#   %span.sr-only Next
 
     %div.bootstrap
       %div#myCarousel.carousel.slide{"data-ride" => "carousel"}
