--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -70,4 +70,5 @@
                   %div.pcard-title
                     = image_tag 'coffee.svg', alt: 'coffees'
                 %p.pcard-text This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-  %a.profile-footer(href="") Dar abrazos o café a #{@name}
+  %div.profile-footer
+    %a(href="http://google.com") Dar abrazos o café a #{@name}
