--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -18,12 +18,47 @@
   flex-direction: column;
   font-family: roboto-regular;
   .profile-navbar {
+    display: flex;
+    flex-direction: row;
     min-height: 60px;
     max-height: 60px;
     width: 100%;
     background-color: white;
     z-index: 1;
     filter: drop-shadow(0px 0px 3px rgba(0,0,0,.3));
+    .pavatar {
+      width: 30%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .puser {
+      background-color: darkcyan;
+      width: 100%;
+      align-items: center;
+      padding-left: 10px;
+      padding-top: 11px;
+      h4 {
+        // Font Family: Roboto
+        // Font Style: Bold
+        // Font Size: 16px
+        // Line Height: 19px
+        // Align: Left
+      }
+      p {
+        margin-top: 2px; 
+        // Font Family: Roboto
+        // Font Style: Light
+        // Font Size: 16px
+        // Line Height: 19px
+        // Align: Left
+      }
+    }
+    .plogo {
+      width: 30%;
+      display: flex;
+      align-items: center;
+    }
   }
   .profile-content {
     display: flex;
@@ -96,10 +131,10 @@
 }
 
 .carousel-caption {
-  top: 91%;
+  top: 93%;
   p {
-    color: #8F8F8F;
-    font-size: 13px;
+    color: rgb(173, 173, 173);
+    font-size: 12px;
     font-family: roboto-italic;
   }
 }
@@ -122,11 +157,11 @@
   margin-right: 20px;
   padding: 12px;
   padding-top: 11px;
-  padding-bottom: 13px;
+  padding-bottom: 10px;
   background-color: white;
   border-radius: 5px;
-  filter: drop-shadow(0px 0px 1px rgba(0,0,0,.3))
-  drop-shadow(0px 0px 3px rgba(0,0,0,.3));
+  filter: drop-shadow(0px 0px 1px rgba(61, 61, 61, 0.2))
+  drop-shadow(0px 0px 2px rgba(109, 109, 109, 0.2));
   font-family: roboto;
   .pcard-header {
     display: flex;
@@ -135,19 +170,20 @@
       flex-direction: column;
       font-family: roboto-bold;
       font-size: 16px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       p {
         margin: 0px;
         margin: 0px;
         &.subtitle {
           font-size: 13px;
           color: #8F8F8F;
+          font-family: roboto;
         }
       }
       img {
         position: absolute;
-        max-height: 35px;
-        margin-left: 50%;
+        max-height: 40px;
+        margin-left: 49%;
       }
     }
   }
