--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -4,6 +4,17 @@
 
 .bootstrap {
   @import "bootstrap";
+  #myCarousel {
+    .carousel-indicators {
+      li {
+        margin-top: -37px;
+        background-color: #afafafb0;
+        &.active {
+          background-color: rgba(121, 121, 121, 0.705);
+        }
+      }
+    }
+  }
 }
 
 .profile-container {
