--- a/app/views/my_profile/new_image.html.haml
+++ b/app/views/my_profile/new_image.html.haml
@@ -31,6 +31,7 @@
         %a.returnbtn(href=my_profile_images_path) Listado de imágenes
         %h1 Agregar imagen
 
+
       %div.info
         %div.card.transparent
           %div.card-body
@@ -40,7 +41,7 @@
           %div.card-body
             %div.card-title Imagen principal
             %p.card-text url
-            %input(type="file")/
+            %input.dropify#input-file-now(type="file")
 
       %div.info
         %div.card.transparent
