--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -33,6 +33,12 @@
         %div.separator
         = form_for @account do |f| 
           %div.info
+            %div.card.transparent
+              %div.card-body
+                %h5.card-title Datos de la cuenta
+                %p.card-text Ingreso de datos de la cuenta bancaria que estará aninada a su cuenta de "Abrazos y Café".
+                %p.card-text
+                %p.card-text Todos los datos son opcionales. Aquellos sin rellenar no se mostrarán en el perfil.
             %div.card
               %div.card-body
                 %h5.card-title Entidad
