--- a/app/views/my_profile/index.html.haml
+++ b/app/views/my_profile/index.html.haml
@@ -36,7 +36,7 @@
         = link_to image_tag('ico-return.svg', alt: 'Icon'), profile_path
         %a.returnbtn(href=profile_path) .returnbtn
         -# El título tiene estilos automáticos gracias a la clase .header
-        %h1 ¡Bienvenid@, #{@user}!
+        %h1 ¡Hola, #{@user}! Bienvenid@ a Abrazos y Café
         -# Si es necesario, se puede poner un botón rosa al lado derecho del header.
         %a.pinkbtn .pinkbtn
         -# Se puede poner un div.separator para generar una pequeña línea horizontal.
