--- a/app/views/my_profile/accounts.html.haml
+++ b/app/views/my_profile/accounts.html.haml
@@ -32,10 +32,13 @@
         %div.separator
 
       %div.info
-        %div.card
+        %div.card.bmargin
           %div.card-header
             %div.section Cuentas
           %div.card-list
+            - unless @my_profile.accounts.last
+              %ul
+                %li.lpadding.nothingfound No tienes ninguna cuenta bancaria vinculada a tu perfil. ¡Agrega una!
             - @my_profile.accounts.each do |account|
               %ul
                 %li.lpadding= "Entidad: " + account.entity.to_s + ", e-mail: " + account.email.to_s + ", Numero de cuenta: " + account.account_number.to_s + ", CI_RIF: " + account.rif_ci.to_s + ", Tipo de cuenta:" + account.account_type.to_s
